# MediMind-AI

./: .gitignore  README.md
backend/: .env.example  README.md  drop_tables.py  langgraph.json  main.py  main_api.py  pyproject.toml  voice_worker.py
backend/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
backend/agents/: medical_agent.py  tools.py
backend/api/: auth.py  auth_routes.py  routes.py  schemas.py
backend/config/: settings.py
backend/db/: base.py  models.py
frontend/: README.md  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/: LocationModal.tsx
frontend/src/components/Chat/: ChatInput.tsx  ChatInterface.tsx  ChatMessage.tsx  VoiceAgent.tsx
frontend/src/components/Sidebar/: Sidebar.tsx
frontend/src/hooks/: useChat.ts
