[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.2.15",
    "langchain-core>=1.2.26",
    "langchain-groq>=1.1.2",
    "langchain-community",
    "python-dotenv",
    "langgraph>=1.1.6",
    "fastapi>=0.135.3",
    "uvicorn>=0.43.0",
    "sqlalchemy>=2.0.49",
    "psycopg2-binary>=2.9.11",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-jose[cryptography]>=3.5.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.22",
    "bcrypt>=5.0.0",
    "langgraph-cli[inmem]>=0.4.24",
]
